# chaos-studio

./: .chaos-plugins.yaml.example  .editorconfig  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/plugin/: marketplace.json
.github/workflows/: release.yml  test.yml
agents/: start-chaos.md
copilot-cli-plugin/: CHANGELOG.md  CONTRIBUTING.md  README.md
copilot-cli-plugin/mcp/: pyproject.toml
copilot-cli-plugin/scripts/: Rbac.ps1  Render.ps1  Wait-AzureLro.ps1
copilot-cli-plugin/skills/chaos-impact/schema/: impact-report.schema.json
copilot-cli-plugin/skills/chaos-impact/scripts/: Build-ImpactCorrelation.ps1  Get-DiagnosticSettings.ps1  Invoke-ChaosImpact.ps1  New-ImpactReport.ps1
copilot-cli-plugin/skills/create-workspace/: SKILL.md
copilot-cli-plugin/skills/setup-scenario/: SKILL.md
copilot-cli-plugin/skills/start-chaos/: SKILL.md
docs/: impact-synthesis-skill.md  impact-synthesis-skill.plan.md
mcp/: pyproject.toml
mcp/chaos_mcp/: azure.py
mcp/tests/: test_monitor_tools.py
samples/: README.md
scenarios/: README.md
scripts/: Ensure-AzLogin.ps1  Invoke-AzRest.ps1  New-RunReport.ps1  State.ps1  Validate-AndFix.ps1
skills/chaos-impact/: SKILL.md
skills/chaos-impact/scripts/: Build-ImpactCorrelation.ps1  Constants.ps1  Get-DiagnosticSettings.ps1  Get-MonitorSignals.ps1  Invoke-ChaosImpact.ps1
skills/chaos-impact/templates/: report.md.tmpl
skills/chaos-impact/tests/: Build-ImpactCorrelation.Tests.ps1  Invoke-ChaosImpact.Tests.ps1  New-ImpactReport.Tests.ps1
skills/create-workspace/scripts/: Invoke-CreateWorkspace.ps1
skills/run-scenario/: SKILL.md
skills/start-chaos/scripts/: Invoke-StartChaos.ps1
(+20 files in other folders)
