[project]
name = "chaos-mcp"
# Skips 0.2.0 — epic target was 0.3.0 (Monitor tools epic).
version = "0.3.0"
description = "MCP server exposing Azure Chaos Studio v2 operations as agent-callable tools."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Azure Chaos Studio" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]
keywords = [
    "azure",
    "chaos-studio",
    "chaos-engineering",
    "reliability",
    "mcp",
    "model-context-protocol",
    "llm",
    "agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://learn.microsoft.com/azure/chaos-studio/"
Documentation = "https://learn.microsoft.com/azure/chaos-studio/"
Repository = "https://github.com/Azure/azure-rest-api-specs"
Issues = "https://github.com/Azure/azure-rest-api-specs/issues"

[project.scripts]
chaos-mcp = "chaos_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chaos_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "chaos_mcp",
    "README.md",
    "LICENSE",
    "smithery.yaml",
]
